--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "@react-navigation/stack": "^6.3.17",
     "axios": "^1.4.0",
     "currency-formatter": "^1.5.9",
+    "expo": "^49.0.2",
     "react": "18.2.0",
     "react-native": "0.72.1",
     "react-native-gesture-handler": "^2.12.0",
+    "react-native-image-colors": "^2.3.0",
     "react-native-linear-gradient": "^2.7.3",
     "react-native-safe-area-context": "^4.6.4",
     "react-native-screens": "^3.22.0",
